# ai_skill_2026

./: Untitled.ipynb  exam_data_viewer.html  lib.101.md  lib.md  main.py  pyproject.toml  readme.md
res/: ai_3_merged.ps1  ai_3_questions.html  doc2md.ps1  docx.md  exam_data.json  exam_data.md  merge_html.ps1  merged_questions.html
res/4-04-04-02_3/: 0封面封底名单前言.doc  0封面封底名单前言.docx  1目录.doc  1目录.docx  第0部分_网络与信息安全管理员（信息安全管理员）_职业简介.doc  第0部分_网络与信息安全管理员（信息安全管理员）_职业简介.docx  第1部分_网络与信息安全管理员（信息安全管理员）_3级_认定方案.doc  第1部分_网络与信息安全管理员（信息安全管理员）_3级_认定方案.docx  第2部分_网络与信息安全管理员（信息安全管理员）_3级_认定要素细目表.docx  第3部分_网络与信息安全管理员（信息安全管理员）_3级_理论知识复习题.docx  第4部分_网络与信息安全管理员（信息安全管理员）_3级_操作技能复习题.docx  第5部分_网络与信息安全管理员（信息安全管理员）_3级_理论知识模拟试卷.docx  第6部分_网络与信息安全管理员（信息安全管理员）_3级_操作技能模拟试卷.doc  第6部分_网络与信息安全管理员（信息安全管理员）_3级_操作技能模拟试卷.docx
res/4-04-04-02_3.md/: 0封面封底名单前言.md  1目录.md  第0部分_网络与信息安全管理员（信息安全管理员）_职业简介.md  第1部分_网络与信息安全管理员（信息安全管理员）_3级_认定方案.md  第2部分_网络与信息安全管理员（信息安全管理员）_3级_认定要素细目表.md  第3部分_网络与信息安全管理员（信息安全管理员）_3级_理论知识复习题.md  第4部分_网络与信息安全管理员（信息安全管理员）_3级_操作技能复习题.md  第5部分_网络与信息安全管理员（信息安全管理员）_3级_理论知识模拟试卷.md  第6部分_网络与信息安全管理员（信息安全管理员）_3级_操作技能模拟试卷.md
res/4-04-04-02_4.md/: 0封面封底名单前言.md  1目录.md  第1部分_网络与信息安全管理员（信息安全管理员）_4级_认定方案.md  第2部分_网络与信息安全管理员（信息安全管理员）_4级_认定要素细目表.md  第3部分-网络与信息安全管理员（信息安全管理员）_4级_理论知识复习题.md  第4部分_网络与信息安全管理员（信息安全管理员）_4级_操作技能复习题.md  (+2 more)
script/: convert_ipynb_to_html.py  convert_office_to_html.py  convert_to_md.py  copy_notebooks_for_answers.py  extract_and_diff_notebooks.py  generate_exam_data.py  generate_exam_md.py  generate_lib_notebooks.py  initialize_analysis_files.py  summarize_libs.py
(+506 files in other folders)
